codex-rs/astral-tui-scrollback/src/snapshots/astral_tui_scrollback__markdown__tests__grok_markdown_semantics_snapshot.snap
---
source: astral-tui-scrollback/src/markdown_tests.rs
expression: plain(&rendered)
---
Astral Markdown

Paragraph with bold, italic, removed, inline code,
and an Astral link (https://example.com).

│ A quoted line with structure.

1. First ordered item
2. Second ordered item
  • Nested bullet
☑ Finished task
☐ Pending task

───

fn main() {
    println!("hello");
}
